<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.smile.colorballs.viewmodel.EnvSettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.xml_base.SettingActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#bb0000ff"
            android:weightSum="5"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/settingTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/settingStr"
                tools:ignore="NestedWeights">
            </TextView>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:divider="@drawable/layout_horizontal_divider"
                android:showDividers="beginning|end"
                android:layout_weight="3"
                android:weightSum="3">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:divider="@drawable/layout_horizontal_divider"
                    android:showDividers="beginning|end"
                    android:layout_weight="1"
                    android:weightSum="3"
                    tools:ignore="NestedWeights">
                    <TextView
                        android:id="@+id/soundSettingTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:textColor="#ffffff00"
                        android:text="@string/soundStr">
                    </TextView>
                    <ToggleButton
                        android:id="@+id/soundSwitch"
                        android:checked="@{viewModel.settings.hasSound}"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:background="@android:color/transparent"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textOn="@string/onStr"
                        android:textOff="@string/offStr">
                    </ToggleButton>
                    <TextView
                        android:id="@+id/soundSetting"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:textColor="#ffffff00"
                        android:text="@{viewModel.settings.hasSound? @string/hasSoundStr : @string/noSoundStr}">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:divider="@drawable/layout_horizontal_divider"
                    android:showDividers="beginning|end"
                    android:layout_weight="1"
                    android:weightSum="3">
                    <TextView
                        android:id="@+id/levelSettingTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:textColor="#ffffff00"
                        android:text="@string/playerLevelStr">
                    </TextView>
                    <ToggleButton
                        android:id="@+id/levelSwitch"
                        android:checked="@{viewModel.settings.easyLevel}"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:background="@android:color/transparent"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textOn="@string/no1"
                        android:textOff="@string/no2">
                    </ToggleButton>
                    <TextView
                        android:id="@+id/levelSetting"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:textColor="#ffffff00"
                        android:text="@{viewModel.settings.easyLevel? @string/easyStr : @string/difficultStr}">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:divider="@drawable/layout_horizontal_divider"
                    android:showDividers="beginning|end"
                    android:layout_weight="1"
                    android:weightSum="3">
                    <TextView
                        android:id="@+id/nextBallSettingTitle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:textColor="#ffffff00"
                        android:text="@string/nextBallSettingStr">
                    </TextView>
                    <ToggleButton
                        android:id="@+id/nextBallSettingSwitch"
                        android:checked="@{viewModel.settings.hasNextBall}"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|start"
                        android:background="@android:color/transparent"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textOn="@string/onStr"
                        android:textOff="@string/offStr">
                    </ToggleButton>
                    <TextView
                        android:id="@+id/nextBallSetting"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:textColor="#ffffff00"
                        android:text="@{viewModel.settings.hasNextBall? @string/showStr : @string/noShowStr}">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2">
                <Button
                    android:id="@+id/cancelSettingButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:background="@android:color/transparent"
                    android:text="@string/cancelStr"
                    tools:ignore="ButtonStyle,NestedWeights">
                </Button>
                <Button
                    android:id="@+id/confirmSettingButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:background="@android:color/transparent"
                    android:text="@string/okStr"
                    tools:ignore="ButtonStyle">
                </Button>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>