<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff00ff00">

    <TextView
        android:id="@+id/top10ScoreTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#ff0000ff"
        android:layout_gravity="center_horizontal"
        android:text="@string/top10Score" />

    <ListView
        android:id="@+id/top10ListView"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="#ff90e5c4"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/top10OkButton"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okStr"
        android:textStyle="bold"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="center"
        android:textColor="#ffff0000" />

</LinearLayout>
