...
    <string name="action_settings">Settings</string>
    <string name="okString">Ok</string>
    <string name="yesStr">YES</string>
    <string name="noStr">NO</string>
    <string name="gameOverStr">Game Over.\nContinue?</string>
    <string name="cancelStr">Cancel</string>
    <string name="submitStr">Send</string>
    <string name="nameStr">Input your name</string>
    <string name="loadingString">Loading …</string>
    <string name="undoStr">Undo</string>
    <string name="top10Str">Top 10</string>
    <string name="globalTop10Str">Global Top 10</string>
    <string name="fileMenuStr">File</string>
...
